--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,10 +19,19 @@ services:
       POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
       SECRET_KEY: "${SECRET_KEY}"
     volumes:
-      - "./data/django/static:/code/static"
       - "./data/django/media:/code/media"
+      - "./data/django/static:/code/static"
       - "./django/code:/code"
-    ports:
-      - "8000:8000"
     depends_on:
       - postgres
+
+  nginx:
+    image: nginx:1.19
+    volumes:
+      - "./data/django/media:/media:ro"
+      - "./data/django/static:/static:ro"
+      - "./nginx/nginx.conf:/etc/nginx/nginx.conf"
+    ports:
+      - "80:80"
+    depends_on:
+      - django
