--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,8 @@ services:
 
   django:
     build:
-      context: ./django
+      context: ./env/django
+    entrypoint: /code/entrypoint.sh
     image: planning/django:dev
     environment:
       POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
@@ -21,7 +22,7 @@ services:
     volumes:
       - "./data/django/media:/code/media"
       - "./data/django/static:/code/static"
-      - "./django/code:/code"
+      - "./src/django:/code"
     depends_on:
       - postgres
 
@@ -30,7 +31,7 @@ services:
     volumes:
       - "./data/django/media:/media:ro"
       - "./data/django/static:/static:ro"
-      - "./nginx/nginx.conf:/etc/nginx/nginx.conf"
+      - "./src/nginx/nginx.conf:/etc/nginx/nginx.conf"
     ports:
       - "80:80"
     depends_on:
