--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,10 +12,7 @@ services:
       - "./data/postgres/pgdata:/var/lib/postgresql/data/pgdata"
 
   django:
-    build:
-      context: ./env/django
-    entrypoint: /code/entrypoint.sh
-    image: planning/django:dev
+    image: planning/django:${VERSION}
     environment:
       POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
       SECRET_KEY: "${SECRET_KEY}"
