--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -5,6 +5,8 @@ services:
     build:
       context: ./env/node
     image: planning/node:dev
+    volumes:
+      - "./src/node:/code"
 
   django:
     build:
