--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,8 +17,6 @@ services:
       POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
       SECRET_KEY: "${SECRET_KEY}"
     volumes:
-      - "./data/django/media:/code/media"
-      - "./data/django/static:/code/static"
       - "./src/django:/code"
     depends_on:
       - postgres
@@ -26,8 +24,8 @@ services:
   nginx:
     image: nginx:1.19
     volumes:
-      - "./data/django/media:/media:ro"
-      - "./data/django/static:/static:ro"
+      - "./src/django/media:/media:ro"
+      - "./src/django/static:/static:ro"
       - "./src/nginx/nginx.conf:/etc/nginx/nginx.conf"
     ports:
       - "80:80"
