--- a/src/node/package.json
+++ b/src/node/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "browserify": "^17.0.0",
+    "gulp": "^4.0.2",
     "gulp-rename": "^2.0.0",
     "gulp-uglify-es": "^2.0.0",
     "vinyl-buffer": "^1.0.1",
