--- a/src/node/package.json
+++ b/src/node/package.json
@@ -3,7 +3,9 @@
     "browserify": "^17.0.0",
     "gulp": "^4.0.2",
     "gulp-csso": "^4.0.1",
+    "gulp-less": "^4.0.1",
     "gulp-rename": "^2.0.0",
+    "gulp-touch-custom": "^1.0.3",
     "gulp-uglify-es": "^2.0.0",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0"
