--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       SECRET_KEY: "${SECRET_KEY}"
     volumes:
       - "./src/django:/code"
+      - "./docs:/docs"
     depends_on:
       - postgres
 
