--- a/src/gulp/package.json
+++ b/src/gulp/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babelify": "^10.0.0",
     "browserify": "^17.0.0",
     "gulp": "^4.0.2",
     "gulp-csso": "^4.0.1",
