--- a/src/gulp/package.json
+++ b/src/gulp/package.json
@@ -11,6 +11,7 @@
     "gulp-touch-custom": "^1.0.3",
     "gulp-uglify-es": "^2.0.0",
     "html-to-react": "^1.4.5",
+    "jquery-browserify": "^1.8.1",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0"
   }
