--- a/src/gulp/package.json
+++ b/src/gulp/package.json
@@ -12,6 +12,8 @@
     "gulp-uglify-es": "^2.0.0",
     "html-to-react": "^1.4.5",
     "jquery-browserify": "^1.8.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0"
   }
