--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -10,4 +10,6 @@ services:
     restart: always
 
   nginx:
+    volumes:
+      - "./src/nginx/nginx.override.logs.conf:/etc/nginx/nginx.override.logs.conf"
     restart: always
