--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -2,6 +2,9 @@ version: '3.8'
 
 services:
   postgres:
+    command: ["postgres", "-c", "logging_collector=on", "-c", "log_directory='/logs'"]
+    volumes:
+      - "./data/postgres/logs:/logs"
     restart: always
 
   django:
