--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -2,7 +2,9 @@ version: '3.8'
 
 services:
   postgres:
-    command: ["postgres", "-c", "log_statement=all"]
+    build:
+      context: ./env/postgres
+  #   command: ["postgres", "-c", "log_statement=all"]
 
   gulp:
     build:
